--- a/assets/scss/pages/_main-contents-home.scss
+++ b/assets/scss/pages/_main-contents-home.scss
@@ -32,11 +32,11 @@
             color: #333333;
 
             &.active {
-                color: #b31a1b;
+                color: #099939;
             }
 
             &:hover {
-                color: #b31a1b;
+                color: #099939;
             }
         }
     }
