--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -1,63 +1,62 @@
 .footer {
-    padding-top: 2px;
-    border-top: 3px solid #e2e2e2;
+    background: url(../images/foot-bg.png) no-repeat center center/cover;
+    padding: 25px 0;
 
-    .footer-top {
-        padding: 30px 0;
-        border-top: 1px solid #e2e2e2;
+    .top {
+        display: flex;
+        align-items: flex-end;
 
-        .link-wrap {
-            display: grid;
-            grid-template-columns: repeat(6, 1fr);
-
-            @media (max-width:767px) {
-                grid-template-columns: repeat(2, 1fr);
-            }
-
-            @media (max-width:1199px) {
-                grid-template-columns: repeat(4, 1fr);
-            }
-        }
-
-        .f-logo {
+        img {
+            margin-inline-end: 15px;
             max-width: 300px;
-            margin-bottom: 30px;
         }
 
-        .title-f {
-            font-family: 'Inter', sans-serif;
-            font-weight: 700;
-            color: #b31a1b;
-            font-size: 15px;
-            padding-bottom: 20px;
+        @media (max-width:767px) {
+            flex-direction: column;
+            align-items: flex-start;
+
+            img {
+                max-width: 200px;
+            }
+        }
+    }
+
+
+    a {
+        font-family: "helvetica-regular";
+        text-transform: uppercase;
+        display: inline-block;
+        transition: all 0.2s;
+        margin-bottom: 10px;
+        font-size: 12px;
+        color: #cbcbcb;
+
+        &:hover {
+            color: #316ca6;
+        }
+    }
+
+    .sign-up {
+        p {
+            font-size: 12px;
+            color: #cacaca;
         }
 
-        a {
-            font-family: "helvetica-bold";
-            display: inline-block;
-            transition: all 0.2s;
-            margin-bottom: 10px;
-            color: #555555;
+        .in-form {
+            border-bottom: 2px solid #eee;
 
-            &:hover {
-                color: #b31a1b;
+            input {
+                background: none;
+                font-size: 12px;
+                color: #cacaca;
+                border: none;
+                padding: 5px 0;
             }
         }
 
-    }
-
-    .dh {
-        display: hidden;
-    }
-
-
-    .foot-bottom {
-        padding: 20px 0;
-        border-top: 1px solid #e2e2e2;
-
-        p {
-            font-family: 'Inter', sans-serif;
-            font-size: 14px;
+        span {
+            font-size: 11px;
+            color: #cacaca;
         }
     }
 }
