--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -1,43 +1,49 @@
 .top-navigation {
-    border-bottom: 4px solid #b90000;
-    padding: 20px 0;
+    background: url(../images/h-bg.png) no-repeat center center/cover;
+    padding: 10px 0 20px;
 
-    .middle-sec {
-        .navbar-brand {
-            display: inline-block;
-            max-width: 600px;
-        }
+    .date-link {
+        a {
+            color: #8ea8c0;
+            font-size: 12px;
+            margin: 0 5px;
+            transition: all 0.2s;
 
-        .address {
-            font-family: 'Inter', sans-serif;
-            font-weight: 500;
-            font-size: 14px;
-            color: #777777;
-
-            @media(max-width:767px) {
-                font-size: 10px;
+            &:hover {
+                color: #ffffff;
             }
         }
     }
 
-    .subscribe-btn {
-        font-size: 16px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 700;
+    .navbar-brand {
+        max-width: 400px;
+
+        @media (max-width:767px) {
+            max-width: 200px;
+        }
+    }
+
+    button {
+        font-size: 12px;
         color: #ffffff;
-        background: #b31a1b;
+        background: none;
         text-align: center;
-        border-radius: 20px;
-        padding: 5px 10px;
+        border: none;
+        text-transform: uppercase;
+        margin: 0 5px;
 
         @media(max-width:767px) {
             font-size: 10px;
+        }
+
+        &:hover {
+            color: #8ea8c0;
         }
     }
 }
 
 .bottom-navigation {
-    padding: 15px 0;
+    padding-top: 10px;
 
     @media(max-width:991px) {
         overflow-x: scroll;
@@ -46,18 +52,25 @@
 
     .link-wrapper {
         @media(max-width:991px) {
-            width: 900px;
+            width: 800px;
         }
     }
 
     .nav-link {
+        text-transform: uppercase;
         color: #333333;
         margin: 0 30px;
-        font-family: 'Inter', sans-serif;
-        font-weight: 500;
+        font-family: "helvetica-bold";
+        padding-bottom: 5px;
+        border-bottom: 2px solid #00000000;
+
+        &.active {
+            color: #082585;
+            border-bottom: 2px solid #54575498;
+        }
 
         &:hover {
-            color: #b90000;
+            color: #274299;
         }
 
         @media(max-width:1199px) {
