--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -77,6 +77,32 @@ body {
   font-size: 14px;
 }
 
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+}
+@media (min-width: 1200px) {
+  .line-clamp-2 {
+    -webkit-line-clamp: 3;
+  }
+}
+
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+}
+
+.line-clamp-4 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 4;
+}
+
 .heading-small {
   font-family: "PT Serif", serif;
   color: #152a45;
