--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -18,6 +18,31 @@ body {
   font-size: 14px;
 }
 
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 2;
+
+  @media(min-width: 1200px) {
+    -webkit-line-clamp: 3;
+  }
+}
+
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+}
+
+.line-clamp-4 {
+  display: -webkit-box;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  -webkit-line-clamp: 4;
+}
+
 // all heading
 .heading-small {
   font-family: 'PT Serif', serif;
