--- a/assets/scss/base/_utility.scss
+++ b/assets/scss/base/_utility.scss
@@ -1,5 +1,11 @@
 .bor-right {
     @media (min-width:1200px) {
-        border-right: 2px solid #eee;
+        border-right: 1px solid #f1f1f1;
+    }
+}
+
+.custom-gutter {
+    @media(min-width: 1200px) {
+        --bs-gutter-x: 32px
     }
 }
