--- a/assets/scss/layout/_navbar.scss
+++ b/assets/scss/layout/_navbar.scss
@@ -1,6 +1,6 @@
 .top-navigation {
     background: url(../images/h-bg.png) no-repeat center center/cover;
-    padding: 10px 0 20px;
+    padding: 10px 0 16px;
 
     .date-link {
         a {
@@ -17,6 +17,11 @@
                 color: #ffffff;
             }
         }
+
+        .f-icon {
+            font-size: 14px;
+            color: #ffffff;
+        }
     }
 
     .navbar-brand {
@@ -28,6 +33,7 @@
     }
 
     button {
+        font-weight: bold;
         font-size: 12px;
         color: #ffffff;
         background: none;
@@ -68,13 +74,15 @@
     }
 
     .nav-link {
-        text-transform: uppercase;
-        color: #010133;
-        margin: 0 30px;
-        font-family: "helvetica-bold";
-        padding-bottom: 5px;
-        padding-inline: 15px;
         border-bottom: 2px solid #00000000;
+        font-family: "helvetica-regular";
+        text-transform: uppercase;
+        padding-inline: 15px;
+        padding-bottom: 5px;
+        white-space: nowrap;
+        color: #010133;
+        font-size: 16px;
+        margin: 0 30px;
 
 
         &.active {
@@ -88,11 +96,48 @@
 
         @media(min-width:1200px) {
             display: inline-block;
-
         }
 
         @media(max-width:1199px) {
+            font-size: 14px;
             margin: 0 20px;
         }
+
+        @media(max-width:991px) {
+            margin: 0 15px;
+        }
+    }
+}
+
+.side-nav {
+    .navbar-brand {
+        max-width: 200px;
+    }
+
+    .main-nav {
+        .nav-link {
+            font-family: "Inter", sans-serif;
+            color: #333;
+            padding: 0.5rem 0px;
+            font-weight: 600;
+
+            @media (max-width: 1399px) {
+                font-size: 14px;
+            }
+
+            &.active,
+            &:hover {
+                color: #b90000;
+            }
+        }
+    }
+
+
+    .copyright {
+        font-family: "Inter", sans-serif;
+        text-align: center;
+        font-weight: 500;
+        font-size: 14px;
+        color: #555;
     }
 }
