--- a/assets/scss/pages/_main-contents-home.scss
+++ b/assets/scss/pages/_main-contents-home.scss
@@ -58,3 +58,14 @@
         }
     }
 }
+
+.fou-border{
+    .news-link{
+        height: 100%;
+        padding-bottom: 40px;
+
+        &.b-bottom{
+            border-bottom: 1px solid #f1f1f1;
+        }
+    }
+}
