--- a/assets/scss/base/_utility.scss
+++ b/assets/scss/base/_utility.scss
@@ -1,11 +1,11 @@
 .bor-right {
     @media (min-width:1200px) {
-        border-right: 1px solid #f1f1f1;
+        border-right: 1px solid #ebebeb;
     }
 }
 
 .bor-right-a {
-    border-right: 1px solid #f1f1f1;
+    border-right: 1px solid #ebebeb;
 }
 
 .custom-gutter {
@@ -13,4 +13,3 @@
         --bs-gutter-x: 32px
     }
 }
-
