--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -197,12 +197,12 @@ hr {
 
 @media (min-width: 1200px) {
   .bor-right {
-    border-right: 1px solid #f1f1f1;
+    border-right: 1px solid #ebebeb;
   }
 }
 
 .bor-right-a {
-  border-right: 1px solid #f1f1f1;
+  border-right: 1px solid #ebebeb;
 }
 
 @media (min-width: 1200px) {
