--- a/assets/scss/base/_typography.scss
+++ b/assets/scss/base/_typography.scss
@@ -93,6 +93,12 @@ body {
   font-size: 35px;
 }
 
+.heading-22 {
+  font-family: "helvetica-bold";
+  font-size: 22px;
+  line-height: 30px;
+  color: #333333;
+}
 
 // all paragraph text
 .text-small-ash {
