--- a/assets/scss/pages/_main-contents-home.scss
+++ b/assets/scss/pages/_main-contents-home.scss
@@ -26,17 +26,18 @@
         }
 
         .page-num {
-            font-family: 'Inter', sans-serif;
-            font-weight: 600;
-            font-size: 16px;
+            border-bottom: 4px solid #c9d1d900;
+            font-family: "helvetica-bold";
+            font-size: 13px;
+            padding: 0 5px;
             color: #333333;
 
             &.active {
-                color: #099939;
+                border-bottom: 4px solid #c9d1d9;
             }
 
             &:hover {
-                color: #099939;
+                border-bottom: 4px solid #c9d1d9;
             }
         }
     }
@@ -59,12 +60,12 @@
     }
 }
 
-.fou-border{
-    .news-link{
+.fou-border {
+    .news-link {
         height: 100%;
         padding-bottom: 40px;
 
-        &.b-bottom{
+        &.b-bottom {
             border-bottom: 1px solid #f1f1f1;
         }
     }
