--- a/assets/scss/pages/_main-contents-home.scss
+++ b/assets/scss/pages/_main-contents-home.scss
@@ -62,8 +62,12 @@
 
 .fou-border {
     .news-link {
-        height: 100%;
-        padding-bottom: 40px;
+        height: 250px;
+
+        &.auto {
+            height: fit-content;
+            padding-bottom: 25px;
+        }
 
         &.b-bottom {
             border-bottom: 1px solid #f1f1f1;
